<resources>
    <string name="app_name">FindMyKeys</string>
    <string name="login_profile_image">login_profile_image</string>
    <string name="email">Email</string>
    <string name="login_email_background">login_email_background</string>
    <string name="clave">Clave</string>
    <string name="login_password_background">login_password_background</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="aun_no_tengo_una_cuenta">Aun no tengo una cuenta</string>
    <string name="mis_cerraduras">Mis Cerraduras</string>
    <string name="lista_back_button">lista_back_button</string>
    <string name="lista_profile_button">lista_profile_button</string>
    <string name="nombre_cerradura">Nombre Cerradura</string>
    <string name="estado_cerrada">Estado: Cerrada</string>
    <string name="lista_image">lista_image</string>
    <string name="lista_icon">lista_icon</string>
    <string name="estado_cerradura">Estado: Cerrada</string>
    <string name="cerradura_info">Cerradura Info</string>
    <string name="cerradura_icon">cerradura_icon</string>
    <string name="ajustes_cerradura">Ajustes Cerradura</string>
    <string name="historial_de_uso">Historial de Uso</string>
    <string name="ajustes_de_privacidad">Ajustes de Privacidad</string>
    <string name="lista_de_miembros">Lista de Miembros</string>
    <string name="eliminar_cerradura">Eliminar Cerradura</string>
</resources>