<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_profile_image"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="611dp"
        android:contentDescription="@string/login_profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_male_circle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/login_email_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_profile_image"
        app:srcCompat="@drawable/login_input" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:fontFamily="@font/quicksand_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:shadowColor="#00000000"
        android:textColorHint="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_profile_image" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/login_password_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:srcCompat="@drawable/login_input" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:fontFamily="@font/quicksand_light"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textColorHint="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/quicksand_light"
        android:onClick="iniciarSesion"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="364dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/quicksand"
        android:text="@string/aun_no_tengo_una_cuenta"
        android:textAllCaps="false"
        android:textColor="#616161"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>