<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigCerradura">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombreCerraduraVista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/ajustes_cerradura"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/config_back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/lista_back_button"
        android:onClick="btnAtras"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left" />

    <View
        android:id="@+id/divider2"
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreCerraduraVista" />

    <View
        android:id="@+id/divider"
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_historial_button" />

    <View
        android:id="@+id/divider3"
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_privacidad_button" />

    <View
        android:id="@+id/divider4"
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_miembros_button" />

    <Button
        android:id="@+id/config_historial_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00432929"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/historial_de_uso"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/config_privacidad_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00432929"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/ajustes_de_privacidad"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <Button
        android:id="@+id/config_miembros_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00432929"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/lista_de_miembros"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/config_miembros_button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00432929"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/eliminar_cerradura"
        android:textAllCaps="false"
        android:textColor="#FF4D4D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

</androidx.constraintlayout.widget.ConstraintLayout>